<resources>
    <string name="app_name">Contact</string>
    <string name="add_contact">Add contact</string>
    <string name="delete_all">Delete all</string>
    <string name="add_sample_data">Add sample data</string>
    <string name="noting_found">Noting found</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="text">Text</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile number</string>
    <string name="family">Family</string>
    <string name="name">Name</string>
    <string name="create_contact">Create Contact</string>
    <string name="edit_contact">Editing Contact</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="action_select_all">Select All</string>
    <string name="action_deselect_all">DeSelect all</string>
    <string name="selected">Selected</string>
    <string name="get_count">Get count</string>
</resources>