<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_baseline_select_all_24"
        android:title="@string/action_select_all"
        android:id="@+id/action_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cancel"
        android:title="@string/cancel"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_deselect_all"
        android:title="@string/action_deselect_all"
        app:showAsAction="never" />

</menu>